--- a/데일리과제 1-4.html
+++ b/데일리과제 1-4.html
@@ -6,19 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <form action="=">
-    <div>
-      <label for="username">UESRNAME : </label>  
-      <input type="text" id="username" placeholder="아이디를 입력하세요">
-    </div>
+    
+      <div>
+        <label for="username">USERNAME : </label>  
+        <input type="text" id="username" placeholder="아이디를 입력하세요">
+      </div>
 
-  <div>
-    <label for="password">PWD : </label>
-    <input type="password" id="password">
-  </div>
 
-  <input type="submit" value="로그인">
+      <div>
+        <label for="password">PWD : </label>
+        <input type="password" id="password">
+      </div>
+
+    <input type="submit" value="로그인">
 
   </form> 
 </body>
